@@ -8,6 +8,11 @@ t/00-load.t
 t/05-base.t
 t/10-shared.t
 t/15-interval.t
+t/20-restart.t
+t/25-start.t
+t/30-status.t
+t/35-timeout.t
+t/40-event_crash.t
 t/manifest.t
 t/pod-coverage.t
 t/pod.t
